# claude-goblin

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  pr-review.yml  release.yml
docs/: commands.md
docs/plans/: 001-incremental-jsonl-parsing.md  002-windows-support.md  003-branch-breakdown-dashboard.md  004-model-cost-tracking.md  005-cicd-pipeline.md  006-pr-code-reviews.md  007-interactive-tui-setup.md  008-bundled-skills.md  009-bundled-commands.md  010-cross-device-sync.md
docs/versions/: 0.1.10.md  0.1.4.md  0.1.5.md  0.1.8.md  0.1.9.md  0.2.0.md  1.1.0.md  1.1.1.md  1.2.0.md  1.2.1.md
rust-src/: cli.rs  main.rs
rust-src/aggregation/: daily_stats.rs  mod.rs
rust-src/commands/: export.rs  mod.rs  remove.rs  restore.rs  setup.rs  stats.rs  status_bar.rs  usage.rs
rust-src/commands/update/: mod.rs  usage.rs
rust-src/config/: mod.rs  settings.rs
rust-src/data/: jsonl_parser.rs  mod.rs
rust-src/hooks/: manager.rs  mod.rs
rust-src/models/: mod.rs  usage_record.rs
rust-src/storage/: database.rs  mod.rs
rust-src/visualization/: dashboard.rs  export.rs  mod.rs
scripts/: create_semantic_model.py
src/: cli.py
src/aggregation/: daily_stats.py  usage_limits.py
src/commands/: delete_usage.py  export.py  help.py  init_container.py  limits.py  restore_backup.py  stats.py  status_bar.py  update_usage.py  usage.py
src/commands/container/: __init__.py  sync.py
src/commands/remove/: __init__.py  hooks.py  usage.py
src/commands/restore/: __init__.py  usage.py
src/commands/setup/: __init__.py  commands.py  container.py  hooks.py  skills.py
src/commands/sync/: __init__.py  add_device.py  push.py  query.py  repair.py  setup.py  status.py
src/commands/update/: __init__.py  usage.py
src/config/: settings.py  user_config.py
src/data/: codex_parser.py  hermes_parser.py  jsonl_parser.py  model_pricing.json
src/hooks/: audio.py  audio_tts.py  awesome_hooks.py  manager.py  png.py  usage.py
src/hooks_data/: uv-standard.py
src/models/: usage_record.py
src/skills/: __init__.py  changelog_updater.md  commit_writer.md  test_generator.md
src/skills/memory-audit/: SKILL.md
src/skills/memory-audit/references/: examples.md
src/skills/memory-audit/scripts/: audit_memory.py
src/slash_commands/: __init__.py  commit.md  review.md  test.md
src/storage/: __init__.py  api.py  duckdb_backend.py  migration.py  onelake_remote.py  quack_remote.py  snapshot_db.py
src/sync/: __init__.py
src/sync/providers/: __init__.py  base.py  motherduck.py  onedrive.py  onelake.py  syncthing.py
src/tui/: __init__.py  app.py
src/utils/: _system.py  text_analysis.py
src/visualization/: activity_graph.py  dashboard.py  export.py  usage_bars.py
tests/: test_hermes_parser.py  test_hermes_source_config.py
