[package]
name = "claude-goblin"
version = "0.2.0"
edition = "2021"
authors = ["klonk"]
description = "CLI for Claude Code usage tracking and analytics"
license = "MIT"
repository = "https://github.com/klonk/claude-goblin-usage"

[[bin]]
name = "ccg"
path = "rust-src/main.rs"


[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Image export
resvg = "0.43"
tiny-skia = "0.11"

# System
dirs = "5"
regex = "1"

# Error handling
anyhow = "1"
thiserror = "1"


[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.17"


[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"


[features]
default = []
macos = []
