[project]
name = "claude-goblin"
version = "0.2.0"
description = "Python CLI for Claude Code utilities and usage tracking/analytics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kurt Buhler"}
]
keywords = ["claude", "claude-code", "usage", "analytics", "tui", "dashboard", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.7.0",
    "typer>=0.9.0",
    "rumps>=0.4.0; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/data-goblin/claude-goblin"
Repository = "https://github.com/data-goblin/claude-goblin"
Issues = "https://github.com/data-goblin/claude-goblin/issues"

[project.optional-dependencies]
export = [
    "pillow>=10.0.0",
    "cairosvg>=2.7.0",
]
duckdb = [
    "duckdb>=1.0.0",
]
onelake = [
    "azure-storage-file-datalake>=12.14.0",
    "azure-identity>=1.15.0",
]
sync = [
    "duckdb>=1.0.0",
    "azure-storage-file-datalake>=12.14.0",
    "azure-identity>=1.15.0",
]
tui = [
    "textual>=0.89.0",
]

[project.scripts]
claude-goblin = "src.cli:main"
ccg = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-faker>=2.0.0",
    "mypy>=1.7.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
